use free from and test in smartgwt ui